2006-07-15	tsch

	* Cairo.pm, Cairo.xs, CairoPattern.xs, CairoSurface.xs,
	cairo-perl-private.h: Add cairo_perl_set_isa and use it for
	surfaces and patterns.

	* CairoSurface.xs, Makefile.PL, cairo-perl.h, t/CairoSurface.t:
	Add support for svg surfaces if available.

	* t/CairoSurface.t: Remove TODO block and revert workaround
	related to the weird unknown surface types.  It's been fixed
	upstream: https://bugs.freedesktop.org/show_bug.cgi?id=7322

2006/07/02	tsch

	* Makefile.PL: Require cairo 1.2.0.  Add CAIRO_FORMAT_RGB16_565.

	* Cairo.pm, CairoFont.xs: Cosmetical changes.

	* Cairo.xs: Add Cairo::VERSION and Cairo::VERSION_ENCODE.

	* t/CairoSurface.t: Shuffle a few tests around to avoid some
	strange singularities.

2006/06/15	tsch

	* Cairo.pm, MANIFEST, NEWS, README: Release 0.04.

2006/06/15	tsch

	* t/CairoSurface.t: Wrap two tests that recently started failing
	in TODO blocks.

2006/06/14	tsch

	* Makefile.PL: Require cairo >= 1.1.8.

	* CairoSurface.xs, t/CairoSurface.t: Wrap and test
	cairo_surface_set_fallback_resolution,
	cairo_image_surface_get_data, cairo_image_surface_get_format, and
	cairo_image_surface_get_stride.  Remove the wrappers and tests for
	cairo_pdf_surface_set_dpi and cairo_ps_surface_set_dpi.

	* t/CairoSurface.t: Test Cairo::ImageSurface::get_width and
	get_height.

2006/06/03	tsch

	* Cairo.pm: Document Cairo::get_group_target, Cairo::new_sub_path,
	Cairo::Pattern::get_type, Cairo::set_scaled_font, Cairo::version,
	and Cairo::version_string.

	* t/Cairo.t, Cairo.xs: Allow Cairo::version[_string] to be called
	as a function and as a class method.

	* CairoPattern.xs, CairoSurface.xs, t/CairoSurface.t, Makefile.PL,
	examples/simple.pl, examples/png/caps_joins.pl,
	examples/png/hering.pl: Whitespace fixes.

	* t/CairoSurface.t, CairoSurface.xs: Wrap
	cairo_surface_get_content.

	* MakeHelper.pm: Don't add a linebreak to croaks so perl prints
	line information.

	* Makefile.PL: Require cairo 1.1.7.
