@@ -1,5 +1,13 @@
 2006-07-15	tsch
 
+	* Cairo.pm: Update existing, add new documentation.
+
+	* TODO: Update.
+
+2006-07-15	tsch
+
+	* Cairo.xs: Remove Cairo::HAS_XLIB_SURFACE and HAS_FT_FONT.
+
 	* Cairo.pm, Cairo.xs, CairoPattern.xs, CairoSurface.xs,
 	cairo-perl-private.h: Add cairo_perl_set_isa and use it for
 	surfaces and patterns.
@@ -284,7 +292,7 @@
 2004/11/28 13:20 (-0500) rwmcfa1
 
 	* Makefile.PL, MakeHelper.pm: initial import of MakeHelper, mess of
-	code moved out of Makefile.PL into it. beginning of cleaning all that 
+	code moved out of Makefile.PL into it. beginning of cleaning all that
 	up. File::Spec now used.
 
 	* examples/png/*: initial import of port of cairo-demo/png examples,
@@ -301,7 +309,7 @@
 
 	* Cairo.xs, CairoMatrix.xs, CairoSurface.xs, CairoPattern.xs: no more
 	new's, not really a good idea.
-	
+
 	* CairoFont.xs: all disabled for now
 
 	* CairoMatrix.xs: copy, multiply, and transforms fixed while doing
@@ -328,7 +336,7 @@
 	here
 
 	* Cairo.xs: fixed some OUTLIST stuff (IN_OUTLIST.) cairo_current_matrix
-	fixed. 
+	fixed.
 
 	* CairoPattern.xs: added class param to create_for_surface
 
@@ -342,7 +350,7 @@
 
 2004/11/08 20:44 (-0500) rwmcfa1
 
-	* Cairo.xs, CairoMatrix.xs, CairoPattern.xs, CairoSurface.xs: all of 
+	* Cairo.xs, CairoMatrix.xs, CairoPattern.xs, CairoSurface.xs: all of
 	the create functions have been cleaned up/fixed. debug prints removed.
 	create's alised to new's where appropriate.
 
